--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   "dependencies": {
     "@ethereumjs/tx": "^3.2.1",
     "@metamask/eth-sig-util": "^4.0.0",
-    "@trezor/connect": "^9.0.0-beta.4",
-    "@trezor/connect-plugin-ethereum": "^9.0.0-beta.1",
-    "@trezor/connect-web": "^9.0.0-beta.4",
+    "@trezor/connect": "^9.0.3",
+    "@trezor/connect-plugin-ethereum": "^9.0.3",
+    "@trezor/connect-web": "^9.0.3",
     "ethereumjs-util": "^7.0.9",
     "hdkey": "0.8.0"
   },
